--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Connections Community App to integrate with IBM Bluemix Watson Services">
     <meta name="author" content="Luis Felipe Flórez">
 
-    <title>Watson Services for IBM Connections</title>
+    <title>IBM Social Application Starter - Connect 2017</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="row">
                 <p class="text-muted credit">
-                    Ejemplo creado por <a href="http://martinbean.co.uk">Luis Flórez</a> y <a href="http://ryanfait.com/sticky-footer/">Jhonattan Vega</a>.
+                    Example created by <a href="">Luis Flórez</a> and <a href="">Rafael de Oliveira</a>.
                 </p>
             </div>
         </div>
